force-app/main/default/objects/AthleteFeatureUpdate__e/AthleteFeatureUpdate__e.object-meta.xml
<CustomObject>
    <description>Platform Event used to sync Data Cloud athlete features into Athlete__c.</description>
    <label>Athlete Feature Update</label>
    <pluralLabel>Athlete Feature Updates</pluralLabel>
</CustomObject>