force-app/main/default/objects/AthleteFeatureUpdate__e/fields/Acwr__c.field-meta.xml
<CustomField>
    <fullName>Acwr__c</fullName>
    <label>ACWR</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>