force-app/main/default/objects/AthleteFeatureUpdate__e/fields/AthleteExternalId__c.field-meta.xml
<CustomField>
    <fullName>AthleteExternalId__c</fullName>
    <label>Athlete External ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>