force-app/main/default/objects/AthleteFeatureUpdate__e/fields/FeaturesJson__c.field-meta.xml
<CustomField>
    <fullName>FeaturesJson__c</fullName>
    <label>Features JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>