force-app/main/default/objects/AthleteFeatureUpdate__e/fields/InjuryRiskScore__c.field-meta.xml
<CustomField>
    <fullName>InjuryRiskScore__c</fullName>
    <label>Injury Risk Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>