force-app/main/default/objects/AthleteFeatureUpdate__e/fields/Load28d__c.field-meta.xml
<CustomField>
    <fullName>Load28d__c</fullName>
    <label>Load 28d</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>