force-app/main/default/objects/AthleteFeatureUpdate__e/fields/Load7d__c.field-meta.xml
<CustomField>
    <fullName>Load7d__c</fullName>
    <label>Load 7d</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>