force-app/main/default/objects/AthleteFeatureUpdate__e/fields/LoadTrend__c.field-meta.xml
<CustomField>
    <fullName>LoadTrend__c</fullName>
    <label>Load Trend</label>
    <length>20</length>
    <type>Text</type>
</CustomField>