force-app/main/default/objects/AthleteFeatureUpdate__e/fields/PerformanceTrend__c.field-meta.xml
<CustomField>
    <fullName>PerformanceTrend__c</fullName>
    <label>Performance Trend</label>
    <length>20</length>
    <type>Text</type>
</CustomField>