force-app/main/default/objects/AthleteFeatureUpdate__e/fields/ReadinessScore__c.field-meta.xml
<CustomField>
    <fullName>ReadinessScore__c</fullName>
    <label>Readiness Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>